<resources>
    <string name="app_name">SAZON PIQUETERO</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtId"> ID</string>
    <string name="txtNombre">Nombre</string>
    <string name="txtCorreo"> Correo</string>
    <string name="txvRegistrarCliente">Registro Cliente</string>
    <string name="txvBottom">Registrar</string>
    <string name="txvMenu">MENU</string>
    <string name="txtCodigo">Codigo</string>
    <string name="txtPrecio">Precio</string>
    <string name="txtDescripcion">Descripcion</string>
    <string name="txtMesa">Mesa</string>
    <string name="spinnerPuesto">Puesto</string>
    <string name="txvEmpleados">Empleados</string>
    <string name="txvPedidos">Pedidos</string>
    <string name="spinnerCliente">Cliente</string>
    <string name="spinnerVariosMenus">Varios Menus</string>
    <string name="spinnerPedido1">Pedido</string>
    <string name="spinnerEmpleado">Empleado</string>
    <string name="spinnerEmpleado1">Empleado</string>
    <string name="txvfactura">Factura</string>
    <string name="txtTotalPagar">Total a pagar</string>



    <string name="todo1">TODO</string>
    <string name="title_activity_prueba">Prueba</string>
    <string name="title_activity_prueba2">Prueba2</string>
    <string name="title_facturaactivity_list">FacturaActivity</string>
    <string name="title_facturaactivity_detail">FacturaActivity Detail</string>
    <string name="todo">TODO</string>
    <string name="Pago">Total a Pagar</string>

</resources>