<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu_Activity">

    <!-- TODO: Update blank fragment layout -->

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabMode="fixed"
        app:tabGravity="fill"

        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/menucafe"
        tools:context=".Menu_Activity">


        <TextView
            android:id="@+id/txvFactura"
            android:layout_width="268dp"
            android:layout_height="41dp"
            android:layout_marginTop="112dp"
            android:layout_marginEnd="68dp"
            android:fontFamily="@font/arbutus_slab"
            android:gravity="center|center_vertical"
            android:text="@string/txvMenu"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtCodigo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="53dp"
            android:layout_marginEnd="17dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/arbutus_slab"
            android:gravity="center"
            android:hint="@string/txtCodigo"
            android:textColorHint="@color/black"
            android:inputType="textPersonName"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/txvFactura"
            app:layout_constraintTop_toBottomOf="@+id/txvFactura" />

        <EditText
            android:id="@+id/txtNombre3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/arbutus_slab"
            android:gravity="center"
            android:hint="@string/txtNombre"
            android:textColorHint="@color/black"
            android:inputType="textPersonName"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="@+id/txtCodigo"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/txtCodigo"
            app:layout_constraintTop_toBottomOf="@+id/txtCodigo" />

        <EditText
            android:id="@+id/txtPrecio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/arbutus_slab"
            android:gravity="center"
            android:hint="@string/txtPrecio"
            android:textColorHint="@color/black"
            android:inputType="textPersonName"
            android:textColor="#000000"
            app:layout_constraintStart_toStartOf="@+id/txtNombre3"
            app:layout_constraintTop_toBottomOf="@+id/txtNombre3" />

        <EditText
            android:id="@+id/txtDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="101dp"
            android:layout_marginTop="503dp"
            android:layout_marginEnd="85dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/arbutus_slab"
            android:gravity="center"
            android:hint="@string/txtDescripcion"
            android:textColorHint="@color/black"
            android:inputType="textPersonName"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txvRegistrar"
            android:layout_width="279dp"
            android:layout_height="70dp"
            android:layout_marginStart="68dp"
            android:layout_marginTop="600dp"
            android:layout_marginEnd="68dp"
            android:layout_marginBottom="61dp"
            android:background="@drawable/btn_boton"
            android:fontFamily="@font/arbutus_slab"
            android:gravity="center"
            android:text="@string/txvBottom"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageRetroceder"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="63dp"
            android:onClick="cambioPantalla"
            android:layout_marginEnd="344dp"
            android:layout_marginBottom="628dp"
            android:contentDescription="@string/todo1"
            android:rotation="180"
            android:src="@drawable/volver1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>