<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cliente_Activity">

    <!-- TODO: Update blank fragment layout -->

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabGravity="fill"
        app:tabMode="fixed" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/clientes1"
        tools:context=".Cliente_Activity">


        <EditText
            android:id="@+id/txtId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="106dp"
            android:layout_marginTop="250dp"
            android:layout_marginEnd="80dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/arbutus_slab"
            android:gravity="center"
            android:hint="@string/txtId"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="350dp"
            android:layout_marginEnd="86dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/arbutus_slab"
            android:gravity="center"
            android:hint="@string/txtNombre"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtCorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="430dp"
            android:layout_marginEnd="86dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/arbutus_slab"
            android:gravity="center"
            android:hint="@string/txtCorreo"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txvRegistrarCliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="548dp"
            android:fontFamily="@font/arbutus_slab"
            android:text="@string/txvRegistrarCliente"
            android:textColor="#000000"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageRetroceder"
            android:layout_width="27dp"
            android:layout_height="28dp"
            android:layout_marginStart="19dp"
            android:layout_marginEnd="352dp"
            android:layout_marginBottom="624dp"
            android:contentDescription="@string/todo1"
            android:rotation="180"
            android:src="@drawable/volver1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/txvBottom"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginStart="91dp"
            android:layout_marginTop="544dp"
            android:layout_marginEnd="70dp"
            android:background="@drawable/btn_boton"
            android:fontFamily="@font/arbutus_slab"
            android:gravity="center"
            android:text="@string/txvBottom"
            android:textColor="#000000"
            android:textColorHint="#1E1D1D"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>