
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Empleados_Activity">

    <!-- TODO: Update blank fragment layout -->

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:tabMode="fixed"
        app:tabGravity="fill"

        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondoempleados"
        tools:context=".Empleados_Activity">

        <TextView
            android:id="@+id/txvFactura"
            android:layout_width="268dp"
            android:layout_height="41dp"
            android:layout_marginTop="112dp"
            android:layout_marginEnd="68dp"
            android:fontFamily="@font/arbutus_slab"
            android:gravity="center|center_vertical"
            android:text="@string/txvEmpleados"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtCodigo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="53dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="340dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/arbutus_slab"
            android:gravity="center"
            android:hint="@string/txtCodigo"
            android:textColorHint="@color/black"
            android:inputType="textPersonName"
            android:textColor="#000000"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txvFactura" />

        <EditText
            android:id="@+id/txtNombre3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/arbutus_slab"
            android:gravity="center"
            android:hint="@string/txtNombre"
            android:textColorHint="@color/black"
            android:inputType="textPersonName"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.462"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCodigo" />

        <TextView
            android:id="@+id/txvRegistrar"
            android:layout_width="270dp"
            android:layout_height="70dp"
            android:layout_marginStart="68dp"
            android:layout_marginEnd="68dp"
            android:layout_marginBottom="61dp"
            android:background="@drawable/btn_boton"
            android:fontFamily="@font/arbutus_slab"
            android:gravity="center"
            android:text="@string/txvBottom"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageRetroceder"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="19dp"
            android:layout_marginEnd="352dp"
            android:layout_marginBottom="624dp"
            android:contentDescription="@string/todo1"
            android:rotation="180"
            android:src="@drawable/retroceder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/spinnerClientes"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:layout_marginStart="91dp"
            android:layout_marginTop="408dp"
            android:layout_marginEnd="100dp"
            android:background="#7CFFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>